# music-tui

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  favorites.json  music_index.json  package-lock.json  package.json  sync.js  worker.js
src/: api.rs  main.rs  player.rs  state.rs  ui.rs
