[package]
name = "music-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rodio = { version = "0.19", features = ["mp3"] }
once_cell = "1.21"
