[package]
name = "music-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
lru = "0.16.3"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rodio = { version = "0.19", features = ["mp3"] }
once_cell = "1.21"
futures-util = "0.3.32"
serde_json = "1.0.149"
tokio-util = { version = "0.7.18", features = ["io"] }
urlencoding = "2.1.3"
dotenvy = "0.15.7"
id3 = "1.16.4"
image = { version = "0.25.10", features = ["png", "jpeg"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
souvlaki = "0.8.3"
